chore: add meta tags for search systems

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="./src/assets/icons/favicon.ico" type="image/x-icon">
+		<meta name="description" content="SemiBlog is a blog wher you can write articless." />
+		<meta name="keywords" content="SemiBlog, semi blog, blog, informative, articles, various topics" />
+		<meta name="robots" content="index, follow" />
+		<meta property="og:title" content="SemiBlog: write your article" />
+		<meta property="og:description" content="SemiBlog offers a delightful mix of engaging and insightful articles on various topics. Discover something new and exciting today!" />
 		<title>SemiBlog</title>
 	</head>
 	<body>
